--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "browserify": "^8.0.3",
     "gulp": "^3.8.10",
     "gulp-livereload": "^3.2.0",
+    "moment": "^2.8.4",
     "twig": "^0.7.2",
+    "twigjs-trans": "0.0.1",
     "vinyl-source-stream": "^1.0.0"
   }
 }
