--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "twigjs-drupal8 ==============",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "npm run lint && mocha",
+    "lint": "eslint ."
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,7 @@
   "devDependencies": {
     "brfs": "^1.2.0",
     "browserify": "^8.0.3",
+    "eslint": "^0.12.0",
     "gulp": "^3.8.10",
     "gulp-livereload": "^3.2.0",
     "moment": "^2.8.4",
