--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint": "^0.12.0",
     "gulp": "^3.8.10",
     "gulp-livereload": "^3.2.0",
+    "mocha": "^2.1.0",
     "moment": "^2.8.4",
     "twig": "^0.7.2",
     "twigjs-trans": "0.0.1",
