--- a/twigjs_drupal8.libraries.yml
+++ b/twigjs_drupal8.libraries.yml
@@ -4,6 +4,7 @@ js-js:
   css:
     theme:
       css/vendor/foundation.css: {}
+      css/style.css: {}
   dependencies:
     - core/drupal
     - core/drupalSettings
