--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "eslint": "^0.12.0",
     "gulp": "^3.8.10",
     "gulp-livereload": "^3.2.0",
+    "istanbul": "^0.3.5",
     "mocha": "^2.1.0",
     "moment": "^2.8.4",
+    "should": "^4.6.1",
     "twig": "^0.7.2",
     "twigjs-trans": "0.0.1",
     "vinyl-source-stream": "^1.0.0"
